--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+GNAF_FILE_URL=https://data.gov.au/data/dataset/19432f89-dc3a-4ef3-b943-5326ef1dbecc/resource/fdce090a-b356-4afe-91bb-c78fbf88082a/download/g-naf_may22_allstates_gda2020_psv_106.zip
+
 STACK_VERSION=8.2.3
 LICENSE=basic
 
