server: update env vars

--- a/server/.env.template
+++ b/server/.env.template
@@ -7,7 +7,8 @@ ELASTIC_PASSWORD=
 
 # refer to https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html for
 # why the port is set like this
-ES_PORT=127.0.0.1:9200
+ES_URL=127.0.0.1
+ES_PORT=9200
 
 KIBANA_PASSWORD=
 KIBANA_PORT=5741
