--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -61,7 +61,7 @@ services:
       - certs:/usr/share/elasticsearch/config/certs
       - elasticsearch_data:/usr/share/elasticsearch/data
     ports:
-      - ${ES_PORT}:9200
+      - ${ES_URL}${ES_PORT}:${ES_PORT}
     environment:
       - node.name=elasticsearch
       - cluster.name=${CLUSTER_NAME}
