server: add elastic user env var

--- a/server/.env.template
+++ b/server/.env.template
@@ -3,6 +3,7 @@ GNAF_FILE_URL=https://data.gov.au/data/dataset/19432f89-dc3a-4ef3-b943-5326ef1db
 STACK_VERSION=8.2.3
 LICENSE=basic
 
+ELASTIC_USER=elastic
 ELASTIC_PASSWORD=
 
 # refer to https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html for
