--- a/server/.env.template
+++ b/server/.env.template
@@ -10,12 +10,13 @@ ELASTIC_PASSWORD=
 # why the port is set like this
 ES_URL=127.0.0.1
 ES_PORT=9200
+ES_INDEX_NAME=addresses
 
 KIBANA_PASSWORD=
 KIBANA_PORT=5741
 
 CLUSTER_NAME=docker-cluster
-
 MEM_LIMIT=1073741824
 
+BACKEND_URL=http://localhost
 NODE_PORT=8000
