--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon src/server.js",
-    "run": "node src/server.js"
+    "server": "node src/server.js"
   },
   "keywords": [],
   "author": "",
